# ILYS-MT

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
audiovisualizer/: README.md
audiovisualizer/src/: main.cpp
docs/: ARCHITECTURE.md
presets/guitar/: acoustic_bright.json  blues_edge.json  classic_crunch.json  clean_di.json  dream_clean.json  high_gain_lead.json  indie_jangle.json  jazz_warm.json  metal_rhythm.json  punk_drive.json
presets/piano/: bright_stage.json  felt_close.json  grand_clean.json  lofi_upright.json  warm_epiano.json
presets/synth/: analog_pad.json  bass_mono.json  bright_pluck.json  dark_drone.json  wide_keys.json
src/: main.cpp
src/ilys/audio/: AudioDevice.hpp  AudioEngine.cpp  AudioEngine.hpp  MiniaudioBackend.cpp  MiniaudioBackend.hpp
src/ilys/cli/: TerminalApp.cpp  TerminalApp.hpp
src/ilys/core/: Result.hpp
src/ilys/dsp/: GuitarMonitorProcessor.cpp  GuitarMonitorProcessor.hpp  InstrumentMonitorProcessor.cpp  InstrumentMonitorProcessor.hpp
src/ilys/midi/: MidiDevice.hpp  MidiEngine.hpp  RtMidiBackend.cpp
src/ilys/presets/: GuitarPreset.hpp  InstrumentPreset.hpp  PresetManager.cpp  PresetManager.hpp
src/ilys/project/: ProjectManager.cpp  ProjectManager.hpp
